assets/css/custom.css
/* Cutomizations of the Casper theme to easy the theme update task */

/* ==========================================================================
   Main Header (cover)
   ========================================================================== */

/* LOGO CARLOS BARAZA */
.main-header .logo-carlosbaraza {
  display: block;
  width: 50%;
  margin: auto;
}
.main-header .logo-carlosbaraza svg {
  fill: currentColor;
  transition: all 0.3s ease;
  overflow: visible;
}
.main-header.with-cover .page-title {
  display: none;
}

/* Carlos Baraza logo animation */
.main-header .logo-carlosbaraza #logo {
  -webkit-animation: logo-carlosbaraza-rotation 14s 2s infinite;
  animation: logo-carlosbaraza-rotation 14s 2s infinite;
  -webkit-transform-origin: 200px 200px 0px;
  -moz-transform-origin: 200px 200px 0px;
  transform-origin: 200px 200px 0px;
}
@-webkit-keyframes logo-carlosbaraza-rotation {
    0% {
        -webkit-transform: rotateZ(0deg);
                transform: rotateZ(0deg);
    }
    5%{
        -webkit-transform: rotateZ(-110deg);
                transform: rotateZ(-110deg);
    }
    30% {
        -webkit-transform: rotateZ(-110deg);
                transform: rotateZ(-110deg);
    }
    35% {
        -webkit-transform: rotateZ(70deg);
                transform: rotateZ(70deg);
    }
    60% {
        -webkit-transform: rotateZ(70deg);
                transform: rotateZ(70deg);
    }
    65% {
        -webkit-transform: rotateZ(0deg);
                transform: rotateZ(0deg);
    }
}
@keyframes logo-carlosbaraza-rotation {
    0% {
        -webkit-transform: rotateZ(0deg);
                transform: rotateZ(0deg);
    }
    5%{
        -webkit-transform: rotateZ(-110deg);
                transform: rotateZ(-110deg);
    }
    30% {
        -webkit-transform: rotateZ(-110deg);
                transform: rotateZ(-110deg);
    }
    35% {
        -webkit-transform: rotateZ(70deg);
                transform: rotateZ(70deg);
    }
    60% {
        -webkit-transform: rotateZ(70deg);
                transform: rotateZ(70deg);
    }
    65% {
        -webkit-transform: rotateZ(0deg);
                transform: rotateZ(0deg);
    }
}
.main-header .logo-carlosbaraza #logo-left {
  -webkit-animation: logo-carlosbaraza-left 14s 2s infinite;
  animation: logo-carlosbaraza-left 14s 2s infinite;
}
@-webkit-keyframes logo-carlosbaraza-left {
    0% {
        -webkit-transform: translate(0px, 0px);
                transform: translate(0px, 0px);
    }
    5%{
        -webkit-transform: translate(-15px, 41px);
                transform: translate(-15px, 41px);
    }
    60% {
        -webkit-transform: translate(-15px, 41px);
                transform: translate(-15px, 41px);
    }
    65% {
        -webkit-transform: rotateZ(0deg);
                transform: rotateZ(0deg);
    }
}
@keyframes logo-carlosbaraza-left {
    0% {
        -webkit-transform: translate(0px, 0px);
                transform: translate(0px, 0px);
    }
    5%{
        -webkit-transform: translate(-15px, 41px);
                transform: translate(-15px, 41px);
    }
    60% {
        -webkit-transform: translate(-15px, 41px);
                transform: translate(-15px, 41px);
    }
    65% {
        -webkit-transform: rotateZ(0deg);
                transform: rotateZ(0deg);
    }
}
.main-header .logo-carlosbaraza #logo-right {
  -webkit-animation: logo-carlosbaraza-right 14s 2s infinite;
  animation: logo-carlosbaraza-right 14s 2s infinite;
}
@-webkit-keyframes logo-carlosbaraza-right {
    0% {
        -webkit-transform: translate(0px, 0px);
                transform: translate(0px, 0px);
    }
    5%{
        -webkit-transform: translate(0px,-47px);
                transform: translate(0px,-47px);
    }
    60% {
        -webkit-transform: translate(0px,-47px);
                transform: translate(0px,-47px);
    }
    65% {
        -webkit-transform: rotateZ(0deg);
                transform: rotateZ(0deg);
    }
}
@keyframes logo-carlosbaraza-right {
    0% {
        -webkit-transform: translate(0px, 0px);
                transform: translate(0px, 0px);
    }
    5%{
        -webkit-transform: translate(0px,-47px);
                transform: translate(0px,-47px);
    }
    60% {
        -webkit-transform: translate(0px,-47px);
                transform: translate(0px,-47px);
    }
    65% {
        -webkit-transform: rotateZ(0deg);
                transform: rotateZ(0deg);
    }
}
.main-header .logo-carlosbaraza #logo-right-noweb {
  -webkit-animation: logo-carlosbaraza-right-noweb 14s 2s infinite;
  animation: logo-carlosbaraza-right-noweb 14s 2s infinite;
}
@-webkit-keyframes logo-carlosbaraza-right-noweb {
    0% {
        -webkit-opacity: 1;
                opacity: 1;
    }
    30%{
        -webkit-opacity: 1;
                opacity: 1;
    }
    35%{
        -webkit-opacity: 0;
                opacity: 0;
    }
    60% {
        -webkit-opacity: 0;
                opacity: 0;
    }
    65% {
        -webkit-opacity: 1;
                opacity: 1;
    }
}
@keyframes logo-carlosbaraza-right-noweb {
    0% {
        -webkit-opacity: 1;
                opacity: 1;
    }
    30%{
        -webkit-opacity: 1;
                opacity: 1;
    }
    35%{
        -webkit-opacity: 0;
                opacity: 0;
    }
    60% {
        -webkit-opacity: 0;
                opacity: 0;
    }
    65% {
        -webkit-opacity: 1;
                opacity: 1;
    }
}

/* Fix the logo display when injected the inline SVG markup */
.blog-logo svg {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    display: block;
    height: 38px;
    padding: 1px 0 5px 0;
    width: auto;
    fill: currentColor;
    transition: all 0.3s ease;
}
.blog-logo svg #gt, .blog-logo svg #brain {
  transition: all 0.3s ease;
  transform: translateX(-780px);
}
.blog-logo svg #mind {
  transition: all 0.3s ease;
  opacity: 0;
}
/* Fix bug with font color in the nav-bar from Author page in Casper theme */
.author-head .main-nav.overlay a {
  color: inherit;
}

/* Set the logo animation when hover */
.main-header.with-cover,
.main-header.with-cover a.blog-logo:hover,
.main-header.tag-head a.blog-logo:hover {
  color: #FFF;
}
.blog-logo:hover svg #gt, .blog-logo:hover svg #brain {
  transform: translateX(0px);
}
.blog-logo:hover svg #mind {
  opacity: 1;
}

@media only screen and (max-width: 900px) {
    .blog-logo svg {
        padding: 4px 0;
    }
}
@media only screen and (max-width: 500px) {
    .blog-logo svg {
        height: 30px;
    }
}

/* Fix the cover display when injected the inline SVG markup */
.main-header .cover, .main-header .cover svg {
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

.main-header .cover #openTag {
  -webkit-transform: translateX(-50px);
          transform: translateX(-50px);
  -webkit-animation: bounce-left 4s 2s infinite;
  animation: bounce-left 4s 2s infinite;
}
.main-header .cover #closeTag {
  -webkit-transform: translateX(50px);
          transform: translateX(50px);
  -webkit-animation: bounce-right 4s 2s infinite;
  animation: bounce-right 4s 2s infinite;
}

/* Social Icons */
.social-icons {
  margin-top: 1em;
  color: #FFF;
  font-size: 1.8em;
}
.social-icons a {
  text-decoration: none;
  color: #FFF;
}
.social-icons span {
  padding: 0.4em;
  border-radius: 40%;
  transition: all 0.3s ease;
}
.social-icons span:hover {
  background-color: #FFF;
  color: black;
}
.social-icons .socicon-twitter:hover { color: #26A3D7; }
.social-icons .socicon-mail:hover { color: #68ED40; }
.social-icons .socicon-rss:hover { color: #FFAA00; }


/* ==========================================================================
   Animations
   ========================================================================== */

@-webkit-keyframes bounce-left {
    0%, 10%, 25%, 40%, 50% {
        -webkit-transform: translateX(-50px);
                transform: translateX(-50px);
    }
    20% {
        -webkit-transform: translateX(-60px);
                transform: translateX(-60px);
    }
    30% {
        -webkit-transform: translateX(-55px);
                transform: translateX(-55px);
    }
}
@keyframes bounce-left {
    0%, 20%, 50%, 80%, 100% {
        -webkit-transform: translateX(-50px);
                transform: translateX(-50px);
    }
    40% {
        -webkit-transform: translateX(-60px);
                transform: translateX(-60px);
    }
    60% {
        -webkit-transform: translateX(-55px);
                transform: translateX(-55px);
    }
}

@-webkit-keyframes bounce-right {
    0%, 10%, 25%, 40%, 50% {
        -webkit-transform: translateX(50px);
                transform: translateX(50px);
    }
    20% {
        -webkit-transform: translateX(60px);
                transform: translateX(60px);
    }
    30% {
        -webkit-transform: translateX(55px);
                transform: translateX(55px);
    }
}
@keyframes bounce-right {
    0%, 20%, 50%, 80%, 100% {
        -webkit-transform: translateX(50px);
                transform: translateX(50px);
    }
    40% {
        -webkit-transform: translateX(60px);
                transform: translateX(60px);
    }
    60% {
        -webkit-transform: translateX(55px);
                transform: translateX(55px);
    }
}

